Fix line wrapping in art.

--- a/css/card-body.css
+++ b/css/card-body.css
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     font-family: 'Courier New', Courier, monospace;
+    line-height: 32pt;
     text-align: center;
 }
 
